Share String angepasst

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,7 @@
     <string name="contactus">Kontaktiere uns</string>
     <string name="Bug_good">RANDrink Bug/Fehler</string>
     <string name="share_subject">RANDrink das zufällige Trinkspiel, Spiele es!</string>
-    <string name="share_Text">Hey, du willst Spaß mit deinen Freunden haben und dabei trinken? Dann hol dir das beste Trinkspiel im Playstore</string>
+    <string name="share_Text">Hey, willst du mit deinen Freunden ein neues Trinkspiel test? Dann hol dir das beste Trinkspiel im Playstore</string>
     <string name="share_auswaehlen">Wähle aus</string>
 
     <!--Ac Einstellungen -->
